--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mac Imperium</title>
 </head>
 <body>
     
+    <h1>My first web page</h1>
+    <p>Yo guys, hope you like my website. We sell Macs.</p>
+
+
 </body>
 </html>
