episode 6 - Headings and text

--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Mac, macOS, Macintosh, Apple">
+    <meta name="description" content="Unleash the power of your mind">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac Imperium</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     
     <h1>My first web page</h1>
-    <p>Yo guys, hope you like my website. We sell Macs.</p>
+    <p> We sell Mac's. 
+        Best computers in the world!</p>
+    <p> We sell Mac's. Best <small>computers</small> in the world!</p>
+    <p> We sell Mac's. Best <mark>computers</mark> in the world!</p>
+    <p> We sell Mac's. Best <sub>computers</sub> in the world!</p>
+    <p> We sell Mac's. Best <sup>computers</sup> in the world! 10<sup>4</sup></p>
+    <p> <pre>We sell Mac's. 
+        Best computers in the world!</pre></p>
+
+
+    <h1>This is a h1 tag</h1>
+    <h2>This is a h2 tag</h2>
+    <h3>This is a h3 tag</h3>
+    <h4>This is a h4 tag</h4>
+    <h5>This is a h5 tag</h5>
 
 
 </body>
