--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+    <img src="mac.png" width="400px" height="300px" alt="MacBook">
     
     <h1>Welcome to myMac</h1>
     <p> We sell Mac's. Best computers in the world!</p>
