--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
 </head>
 <body>
 
+    <div id="top"></div>
+
     <img src="mac.png" width="400px" height="300px" alt="MacBook">
     
     <h1>Welcome to myMac</h1>
     <p> We sell Mac's. Best computers in the world!</p>
-    
+
+    <a href="contact.html">Contact us</a>
+    <a href="prices/mac-prices.html">Prices</a>
+    <a href="http://www.apple.com" target="_blank">Go to Apple website</a>
+    <a href="downloads/Me.png">Download picture</a>
+
+
 
     <h2>Mac's</h2>
     <h3>MacBook</h3>
@@ -34,6 +42,8 @@
    
     <h3>By mail</h3>
     <p>test@test.pl</p>
+
+    <a href="#top">Go to top</a>
 
 
 </body>
