--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <h1>Welcome to myMac</h1>
     <p> We sell Mac's. Best computers in the world!</p>
 
-    <a href="contact.html">Contact us</a>
-    <a href="prices/mac-prices.html">Prices</a>
-    <a href="http://www.apple.com" target="_blank">Go to Apple website</a>
-    <a href="downloads/Me.png">Download picture</a>
-
+  
+  <ul>
+    <li><a href="contact.html">Contact us</a></li>
+    <li><a href="prices/mac-prices.html">Prices</a></li>
+    <li><a href="http://www.apple.com" target="_blank">Go to Apple website</a></li>
+    <li><a href="downloads/Me.png">Download picture</a></li>
+</ul>
 
 
     <h2>Mac's</h2>
