Lesson 12 - <br> break line and <hr> tags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <h1>Welcome to myMac</h1>
     <p> We sell Mac's. Best computers in the world!</p>
+    <hr>
 
   
   <ul>
@@ -26,15 +27,16 @@
     <li><a href="downloads/Me.png">Download picture</a></li>
 </ul>
 
-
+<hr>
     <h2>Mac's</h2>
     <h3>MacBook</h3>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vel omnis dolorem eum corrupti sequi est? Unde praesentium pariatur fugit blanditiis, illo illum laborum atque iure molestiae quo? Magnam, non.</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vel omnis dolorem eum corrupti sequi est? <br> Unde praesentium pariatur fugit blanditiis, illo illum laborum atque iure molestiae quo? Magnam, non.</p>
    
     
     <h2>About</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident amet perferendis fugit doloribus? Incidunt, expedita, consectetur in quaerat officia vel atque iure eligendi voluptatum hic nemo dignissimos, excepturi recusandae explicabo.</p>
 
+    <hr>
 
     <h2>Contact</h2>
     <p>Contact us anytime</p>
