--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
     <title>Document</title>
 </head>
 <body>
 
-    <h2>Contact</h2>
+    <h1>Contact</h1>
     <p>Contact us anytime</p>
 
     <h3>By phone</h3>
