Lesson 16 - JavaScript implementation

--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
     <title>Mac Imperium</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
-<style>
-
-    #navigation a{
-        color: greenyellow;
-    }
-
-</style>
 
 </head>
 <body>
@@ -32,7 +25,7 @@
 
     <div id="navigation">
     <ul>
-        <li><a href="contact.html">Contact us</a></li>
+        <li><a onclick="alert('yo ninjas, welcome to my website');" href="contact.html">Contact us</a></li>
         <li><a href="prices/mac-prices.html">Prices</a></li>
         <li><a href="http://www.apple.com" target="_blank">Go to Apple website</a></li>
         <li><a href="downloads/Me.png">Download picture</a></li>
@@ -72,6 +65,13 @@
     </div> 
 
     <a href="#top">Go to top</a>
+    <script src="scripts/main.js"></script>
+
+
+    <script>
+
+
+    </script>
 
 
 </body>
